# Pneumonia-Detection

./: .gitignore  LICENSE  README.md  init_setup.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  template.py
src/: exception.py  logger.py
src/utils/: common.py
