# Configuration file for setup.py
# This file configures the behavior of the setup.py script when building and distributing Python packages

[metadata]
licence = "MIT"
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    ipykernel >= 6.0.0
    gdown >=5.0.0
    mlflow >=2.20.0
    dvc >= 3.59.0

[options.packages.find]
exclude =
    tests
    docs

[options.extras_require]
testing =
    pytest >= 8.3.0
    black >= 25.0.0
    flake8 >= 6.0.0
    mypy >= 1.5.0
    tox >= 4.0.0

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist

[tool:pytest]
addopts = -ra -q

[mypy]
ignore_missing_imports = true